// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderDateSearch QueryBuilderDateSearch Component Display field if match type is equals: Expect date field not to be displayed since the match type is not equals 1`] = `"<QueryBuilderDateSearch matchType=\\"empty\\" value=\\"test\\" setValue={[Function: bound fn]} />"`;

exports[`QueryBuilderDateSearch QueryBuilderDateSearch Component Display field if match type is equals: Expect date field to be displayed since match type is equals 1`] = `
"<QueryBuilderDateSearch matchType=\\"equals\\" value=\\"test\\" setValue={[Function: bound fn]}>
  <r className=\\"form-control\\" value=\\"test\\" onChange={[Function: onChange]} onChangeRaw={[Function: onChangeRaw]} dateFormat=\\"yyyy-MM-dd\\" placeholderText=\\"YYYY-MM-DD\\" isClearable={true} showYearDropdown={true} todayButton=\\"Today\\" allowSameDay={false} dateFormatCalendar=\\"LLLL yyyy\\" disabled={false} disabledKeyboardNavigation={false} dropdownMode=\\"scroll\\" onFocus={[Function: onFocus]} onBlur={[Function: onBlur]} onKeyDown={[Function: onKeyDown]} onInputClick={[Function: onInputClick]} onSelect={[Function: onSelect]} onClickOutside={[Function: onClickOutside]} onMonthChange={[Function: onMonthChange]} onCalendarOpen={[Function: onCalendarOpen]} onCalendarClose={[Function: onCalendarClose]} preventOpenOnFocus={false} onYearChange={[Function: onYearChange]} onInputError={[Function: onInputError]} monthsShown={1} readOnly={false} withPortal={false} shouldCloseOnSelect={true} showTimeSelect={false} showTimeInput={false} showPreviousMonths={false} showMonthYearPicker={false} showFullMonthYearPicker={false} showTwoColumnMonthYearPicker={false} showFourColumnMonthYearPicker={false} showYearPicker={false} showQuarterYearPicker={false} strictParsing={false} timeIntervals={30} timeCaption=\\"Time\\" previousMonthAriaLabel=\\"Previous Month\\" previousMonthButtonLabel=\\"Previous Month\\" nextMonthAriaLabel=\\"Next Month\\" nextMonthButtonLabel=\\"Next Month\\" previousYearAriaLabel=\\"Previous Year\\" previousYearButtonLabel=\\"Previous Year\\" nextYearAriaLabel=\\"Next Year\\" nextYearButtonLabel=\\"Next Year\\" timeInputLabel=\\"Time\\" enableTabLoop={true} yearItemNumber={12} renderDayContents={[Function: renderDayContents]} focusSelectedMonth={false} showPopperArrow={true} excludeScrollbar={true} customTimeInput={{...}} calendarStartDay={[undefined]}>
    <r className={[undefined]} wrapperClassName={[undefined]} hidePopper={true} portalId={[undefined]} popperModifiers={{...}} targetComponent={{...}} popperContainer={[undefined]} popperComponent={{...}} popperPlacement=\\"bottom-start\\" popperProps={{...}} popperOnKeyDown={[Function (anonymous)]} enableTabLoop={true}>
      <Manager className=\\"react-datepicker-manager\\">
        <Reference>
          <div className=\\"react-datepicker-wrapper\\">
            <div className=\\"react-datepicker__input-container\\">
              <input type=\\"text\\" value=\\"test\\" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onClick={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} id={[undefined]} name={[undefined]} autoFocus={[undefined]} placeholder=\\"YYYY-MM-DD\\" disabled={false} autoComplete={[undefined]} className=\\"form-control\\" title={[undefined]} readOnly={false} required={[undefined]} tabIndex={[undefined]} aria-describedby={[undefined]} aria-invalid={[undefined]} aria-labelledby={[undefined]} aria-required={[undefined]} />
            </div>
          </div>
        </Reference>
      </Manager>
    </r>
  </r>
</QueryBuilderDateSearch>"
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998-05 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time subtype, testing with 1998-05-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998-05 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date subtype, testing with 1998-05-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy",
      "gte": "1998||/y",
      "lte": "1998||/y",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998-05 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM",
      "gte": "1998-05||/M",
      "lte": "1998-05||/M",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the containsDate operator, undefined subtype, testing with 1998-05-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "1998-05-19||/d",
      "lte": "1998-05-19||/d",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, date_time subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, date_time_optional_tz subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, local_date subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, local_date_time subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the empty operator, undefined subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.dateField",
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, date_time subtype, testing with 2013-12-16 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, date_time_optional_tz subtype, testing with 2013-12-16 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, local_date subtype, testing with 2013-12-16 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, local_date_time subtype, testing with 2013-12-16 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the equals operator, undefined subtype, testing with 2013-12-16 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "format": "yyyy-MM-dd",
      "gte": "2013-12-16",
      "lte": "2013-12-16",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, date_time subtype, testing with 1970-07-31 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gt": "1970-07-31",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, date_time_optional_tz subtype, testing with 1970-07-31 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gt": "1970-07-31",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, local_date subtype, testing with 1970-07-31 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, local_date_time subtype, testing with 1970-07-31 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gt": "1970-07-31",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThan operator, undefined subtype, testing with 1970-07-31 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gt": "1970-07-31",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, date_time subtype, testing with 1981-06-15 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gte": "1981-06-15",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1981-06-15 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gte": "1981-06-15",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, local_date subtype, testing with 1981-06-15 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, local_date_time subtype, testing with 1981-06-15 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gte": "1981-06-15",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the greaterThanOrEqualTo operator, undefined subtype, testing with 1981-06-15 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "gte": "1981-06-15",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, date_time subtype, testing with 1982-04-20 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lt": "1982-04-20",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, date_time_optional_tz subtype, testing with 1982-04-20 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lt": "1982-04-20",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, local_date subtype, testing with 1982-04-20 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, local_date_time subtype, testing with 1982-04-20 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lt": "1982-04-20",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThan operator, undefined subtype, testing with 1982-04-20 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lt": "1982-04-20",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, date_time subtype, testing with 1995-06-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lte": "1995-06-19",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1995-06-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lte": "1995-06-19",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, local_date subtype, testing with 1995-06-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, local_date_time subtype, testing with 1995-06-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lte": "1995-06-19",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the lessThanOrEqualTo operator, undefined subtype, testing with 1995-06-19 value 1`] = `
Object {
  "range": Object {
    "data.attributes.dateField": Object {
      "lte": "1995-06-19",
      "time_zone": "+00:00",
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, date_time subtype, testing with null value 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, date_time_optional_tz subtype, testing with null value 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, local_date subtype, testing with null value 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, local_date_time subtype, testing with null value 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEmpty operator, undefined subtype, testing with null value 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.dateField",
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, date_time subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "range": Object {
              "data.attributes.dateField": Object {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "+00:00",
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, date_time_optional_tz subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "range": Object {
              "data.attributes.dateField": Object {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "+00:00",
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, local_date subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "range": Object {
              "data.attributes.dateField": Object {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, local_date_time subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "range": Object {
              "data.attributes.dateField": Object {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Attribute level tests Using the notEquals operator, undefined subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "range": Object {
              "data.attributes.dateField": Object {
                "format": "yyyy-MM-dd",
                "gte": "2002-12-30",
                "lte": "2002-12-30",
                "time_zone": "+00:00",
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.dateField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `Object {}`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998-05 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time subtype, testing with 1998-05-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, date_time_optional_tz subtype, testing with 1998-05-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998-05 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date subtype, testing with 1998-05-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, local_date_time subtype, testing with 1998-05-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy",
                "gte": "1998||/y",
                "lte": "1998||/y",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998-05 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM",
                "gte": "1998-05||/M",
                "lte": "1998-05||/M",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the containsDate operator, undefined subtype, testing with 1998-05-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19||/d",
                "lte": "1998-05-19||/d",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, date_time subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, date_time_optional_tz subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, local_date subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, local_date_time subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the empty operator, undefined subtype, testing with null value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, date_time subtype, testing with 2013-12-16 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, date_time_optional_tz subtype, testing with 2013-12-16 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, local_date subtype, testing with 2013-12-16 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, local_date_time subtype, testing with 2013-12-16 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the equals operator, undefined subtype, testing with 2013-12-16 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "format": "yyyy-MM-dd",
                "gte": "2013-12-16",
                "lte": "2013-12-16",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, date_time subtype, testing with 1970-07-31 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "1970-07-31",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, date_time_optional_tz subtype, testing with 1970-07-31 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "1970-07-31",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, local_date subtype, testing with 1970-07-31 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "1970-07-31",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, local_date_time subtype, testing with 1970-07-31 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "1970-07-31",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThan operator, undefined subtype, testing with 1970-07-31 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "1970-07-31",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, date_time subtype, testing with 1981-06-15 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "1981-06-15",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1981-06-15 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "1981-06-15",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, local_date subtype, testing with 1981-06-15 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "1981-06-15",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, local_date_time subtype, testing with 1981-06-15 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "1981-06-15",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the greaterThanOrEqualTo operator, undefined subtype, testing with 1981-06-15 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "1981-06-15",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, date_time subtype, testing with 1982-04-20 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "1982-04-20",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, date_time_optional_tz subtype, testing with 1982-04-20 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "1982-04-20",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, local_date subtype, testing with 1982-04-20 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "1982-04-20",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, local_date_time subtype, testing with 1982-04-20 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "1982-04-20",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThan operator, undefined subtype, testing with 1982-04-20 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "1982-04-20",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, date_time subtype, testing with 1995-06-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "1995-06-19",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, date_time_optional_tz subtype, testing with 1995-06-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "1995-06-19",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, local_date subtype, testing with 1995-06-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "1995-06-19",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, local_date_time subtype, testing with 1995-06-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "1995-06-19",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the lessThanOrEqualTo operator, undefined subtype, testing with 1995-06-19 value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "1995-06-19",
                "time_zone": "+00:00",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, date_time subtype, testing with null value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, date_time_optional_tz subtype, testing with null value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, local_date subtype, testing with null value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, local_date_time subtype, testing with null value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEmpty operator, undefined subtype, testing with null value 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, date_time subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "range": Object {
                  "includes.name": Object {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                    "time_zone": "+00:00",
                  },
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, date_time_optional_tz subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "range": Object {
                  "includes.name": Object {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                    "time_zone": "+00:00",
                  },
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, local_date subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "range": Object {
                  "includes.name": Object {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, local_date_time subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "range": Object {
                  "includes.name": Object {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                  },
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderDateSearch transformDateSearchToDSL function Relationship level tests Using the notEquals operator, undefined subtype, testing with 2002-12-30 value 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "range": Object {
                  "includes.name": Object {
                    "format": "yyyy-MM-dd",
                    "gte": "2002-12-30",
                    "lte": "2002-12-30",
                    "time_zone": "+00:00",
                  },
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;
